<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shot Left (Taxi Change Counter)</string>
    <string name="action_settings">Settings</string>
    <string name="enter_unit_cost_activity_title">Enter unit cost</string>
    <string name="unit_price_label">Enter fare per passenger:</string>
    <string name="start_collection">Start Collection</string>
    <string name="title_activity_collections">All Collections</string>
    <string name="currency_symbol">R </string>
    <string name="app_logo_description">Taxi Change App Logo</string>
    <string name="enter_amount_brought_forward">Enter amount brought forward:</string>
    <string name="enter_quantity">Number of passengers:</string>
    <string name="add_collection">Add</string>
    <string name="instructions_content_desc">instructions image 0001</string>
    <string name="amount_brought_forward_header">Amount</string>
    <string name="passengers_header">Passengers</string>
    <string name="change_due_header">Change Due</string>
    <string name="edit_collection_details_content_desc">Edit collection details</string>
    <string name="delete_collection_details_content_desc">Delete collection details</string>
    <string name="save_collection_history_details_desc">Save collection history details</string>
    <string name="title_activity_about">About + Contact</string>

</resources>
