<ScrollView 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="0dp"
		android:background="@android:color/transparent"
	    >
	    
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="0dp"
		    android:layout_margin="10dp"
		    android:orientation="vertical"
		    >
		        
		    <!-- Label for entering the amount brought forward  -->
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textColor="@color/white_color"
		            android:textSize="@dimen/medium_font_size"
		            android:text="@string/enter_amount_brought_forward"
		            android:gravity="left"
		            android:paddingTop="12dp"
		            android:paddingBottom="12dp"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="40dp"
		            />
		        
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:weightSum="1.0"
		            android:layout_marginLeft="10dp"
		            android:layout_marginRight="10dp"
		            >
		            
		            <!-- Label for the currency symbol -->
		             <TextView
				        android:layout_width="0dp"
				        android:layout_height="wrap_content"
				        android:text="@string/currency_symbol"
				        android:textColor="@color/white_color"
				        android:textSize="@dimen/large_font_size"
				        android:paddingTop="12dp"
				        android:paddingBottom="12dp"
				       	android:paddingRight="10dp"
				       	android:gravity="right"
				       	android:layout_weight="0.3"
				        />
				    
				   
		             <!-- TextBox for the amount brought forward -->
			     	<EditText 
				         android:id="@+id/amountBroughtForwardEditText"
				         android:layout_width="0dp"
				         android:layout_height="wrap_content"
				         android:paddingTop="12dp"
				         android:paddingBottom="12dp"
				         android:paddingLeft="20dp"
				         android:textSize="@dimen/large_font_size"
				         android:inputType="numberDecimal"
				         android:textColor="@color/white_color"
				         android:layout_weight="0.7"
				         android:maxLength="8"
			         />
		        </LinearLayout>
		        
		        <!-- Label for entering number of passengers -->
		        <TextView
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/enter_quantity"
				        android:textColor="@color/white_color"
				        android:textSize="@dimen/medium_font_size"
				        android:paddingTop="12dp"
				        android:paddingBottom="12dp"
				       	android:paddingRight="10dp"
				       	android:gravity="left"
				       	android:layout_marginLeft="10dp"
				       	
				    
				        />
		        
		       <LinearLayout
		            android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:padding="0dp"
				    android:orientation="horizontal"
				    android:layout_gravity="right"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="10dp"
		            >
		            
		            <!-- TextBox for entering the number of passengers -->
		             <EditText 
				         android:id="@+id/numberOfPeopleEditText"
				         android:layout_width="match_parent"
				         android:layout_height="wrap_content"
				         android:layout_marginLeft="60dp"
				         android:paddingTop="12dp"
				         android:paddingBottom="12dp"
				         android:paddingLeft="20dp"
				         android:textSize="@dimen/large_font_size"
				         android:inputType="number"
				         android:textColor="@color/white_color"
				         android:maxLength="2"
				 
			      />
		            
		        </LinearLayout>
		</LinearLayout>
</ScrollView>